--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:fix": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/react": "^0.0.0-insiders.c9bf352",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -33,8 +34,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
-    "vite-plugin-pwa": "^1.0.3",
     "vite-plugin-checker": "^0.10.3",
+    "vite-plugin-pwa": "^1.0.3",
     "vite-tsconfig-paths": "^5.1.4",
     "workbox-window": "^7.3.0"
   }
