--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+    listen 8080;
+    listen [::]:8080;
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, must-revalidate";
-        expires 0;
     }
 }
